Fix menu z-index

--- a/scss/_corroto.scss
+++ b/scss/_corroto.scss
@@ -447,3 +447,8 @@ input[type=drop]:checked ~ .toggle:after {
 		}
 	}
 }
+
+/* fix menu z-index */
+#mainNav {
+    z-index:10;  
+  }
